--- a/src/Components/Main/Faby/FabyRose.css
+++ b/src/Components/Main/Faby/FabyRose.css
@@ -35,6 +35,11 @@
   padding: 1rem;
   font-weight: bold;
 }
+.testimonios {
+  display: flex;
+  flex-direction: column;
+  gap: 1.2rem;
+}
 
 @media (min-width: 768px) {
   .img__faby {
@@ -46,5 +51,11 @@
     gap: 2rem;
     align-items: center;
     justify-content: center;
+  }
+
+  .testimonios {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 0.5rem;
   }
 }
