--- a/src/Components/NavMenu/NavMenu.css
+++ b/src/Components/NavMenu/NavMenu.css
@@ -26,7 +26,8 @@
 }
 
 .link__item:hover {
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: var(--colorClaro);
+  color: var(--colorOscuro);
 }
 @media (min-width: 768px) {
   .nav__container {
