--- a/src/Components/Main/Contacto/Contacto.css
+++ b/src/Components/Main/Contacto/Contacto.css
@@ -55,8 +55,15 @@ input,
   border-radius: 0 3rem 0 3rem;
 }
 .contact__info-container p {
-  padding: 1.5rem;
+  padding: 0.5rem;
   font-size: 1.2rem;
+}
+
+p small {
+  font-size: 12px;
+  color: gray;
+  text-align: start;
+  padding: 0;
 }
 
 .socialmedia__container {
