Se ajusto el margin de la seccion contacto y se agrego un texto

--- a/src/Components/Main/Contacto/Contacto.css
+++ b/src/Components/Main/Contacto/Contacto.css
@@ -96,6 +96,7 @@ p small {
 @media (min-width: 950px) {
   .contacto__flex {
     display: flex;
+    margin-top: 0.5rem;
   }
   .contact__form {
     width: 65%;
