--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -59,6 +59,9 @@ header {
   font-family: var(--titulos);
   margin: 0.5rem;
 }
+#text__initial {
+  font-weight: 400;
+}
 
 @media (min-width: 768px) {
   header {
