Se agregaron corrigieron la posicion de los textos

--- a/src/Components/Main/Cursos/Cursos.css
+++ b/src/Components/Main/Cursos/Cursos.css
@@ -19,6 +19,8 @@
 #course__list {
   display: flex;
   flex-direction: column;
+  max-width: 80%;
+  margin: 0 auto;
 }
 #course__list ol {
   list-style: unset;
