--- a/src/Components/NavMenu/NavMenu.css
+++ b/src/Components/NavMenu/NavMenu.css
@@ -4,12 +4,46 @@
   z-index: 998;
   height: auto;
 }
+.menu__label {
+  position: fixed;
+  padding: 0.5rem;
+  right: 30px;
+  bottom: 30px;
+  z-index: 998;
+  background-color: blueviolet;
+  width: 100px;
+  text-align: center;
+  padding: 0.5rem;
+  border-radius: 0.5rem;
+  border: 3px solid blueviolet;
+  cursor: pointer;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.menu__check {
+  display: none;
+}
+.menu__label ~ .menu__check:checked ~ .ul__container {
+  display: none;
+}
+
+.menu__label:hover {
+  background-color: rgb(85, 0, 164);
+  color: white;
+}
 
 .ul__container {
   border-radius: 1rem;
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
   justify-content: center;
+  position: fixed;
+  z-index: 997;
+  top: 0;
+  right: 0;
+  background-color: rgb(154, 154, 154);
+  width: 100%;
+  height: 100vh;
 }
 .list__item {
   padding: 0.3rem;
@@ -23,6 +57,7 @@
   border: 2px solid var(--colorClaro);
   border-radius: 2rem;
   cursor: pointer;
+  background-color: violet;
 }
 
 .link__item:hover {
@@ -34,12 +69,29 @@
     width: 768px;
     position: static;
   }
+  .menu__label {
+    display: none;
+  }
+  .menu__label ~ .menu__check:checked ~ .ul__container {
+    display: inline-flex;
+  }
   .ul__container {
+    position: static;
     display: flex;
+    flex-direction: row;
+    width: auto;
+    height: auto;
     margin: 0;
     background-color: transparent;
     justify-content: center;
   }
+
+  /*  .ul__container {
+  border-radius: 1rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+} */
 
   .list__item {
     padding: 0;
