--- a/src/Components/NavMenu/NavMenu.css
+++ b/src/Components/NavMenu/NavMenu.css
@@ -23,8 +23,19 @@
 .menu__check {
   display: none;
 }
-.menu__label ~ .menu__check:checked ~ .ul__container {
-  display: none;
+
+.menu__check ~ .ul__container {
+  transform: translateX(700px);
+  transition: transform 0.4s ease-in-out;
+}
+
+.menu__check:checked ~ .ul__container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  transform: translateX(0px);
 }
 
 .menu__label:hover {
@@ -33,37 +44,57 @@
 }
 
 .ul__container {
+  background-image: url("https://i.pinimg.com/originals/8a/f7/ea/8af7eabf434f2904368781f07574d568.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
   border-radius: 1rem;
+  border-left: 2px solid rgba(238, 130, 238, 0.838);
   display: flex;
   flex-direction: column;
+  align-items: end;
   justify-content: center;
   position: fixed;
   z-index: 997;
+  padding-top: auto;
+  padding-bottom: auto;
   top: 0;
-  right: 0;
-  background-color: rgb(154, 154, 154);
+  right: 0px;
+  background-color: rgb(234, 181, 233);
   width: 100%;
   height: 100vh;
 }
 .list__item {
   padding: 0.3rem;
+  width: 100%;
 }
 .link__item {
+  margin: 0 auto;
   padding: 1rem;
   font-size: var(--h4);
   display: block;
   font-weight: bold;
-  color: var(--colorClaro);
+  color: var(--colorOscuro);
   border: 2px solid var(--colorClaro);
   border-radius: 2rem;
   cursor: pointer;
-  background-color: violet;
+  background-color: rgba(238, 130, 238, 0.838);
 }
 
 .link__item:hover {
-  background-color: var(--colorClaro);
-  color: var(--colorOscuro);
+  background-color: var(--colorBrillante);
 }
+.link__label:focus-within {
+  background-color: aqua;
+}
+
+/* Estilos para enlaces dentro del menú en dispositivos móviles */
+.link__label {
+  display: block;
+  margin: 0.3rem 0;
+  /* Otros estilos según tus preferencias */
+}
+
 @media (min-width: 768px) {
   .nav__container {
     width: 768px;
@@ -72,11 +103,12 @@
   .menu__label {
     display: none;
   }
-  .menu__label ~ .menu__check:checked ~ .ul__container {
-    display: inline-flex;
+  .menu__label ~ .menu__check ~ .ul__container {
+    transform: translateY(0px);
   }
   .ul__container {
     position: static;
+    background-image: none;
     display: flex;
     flex-direction: row;
     width: auto;
@@ -85,13 +117,6 @@
     background-color: transparent;
     justify-content: center;
   }
-
-  /*  .ul__container {
-  border-radius: 1rem;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-} */
 
   .list__item {
     padding: 0;
