--- a/src/Components/PageCursos/PageCursos.css
+++ b/src/Components/PageCursos/PageCursos.css
@@ -2,7 +2,8 @@ header {
   padding-top: 2rem;
   position: relative;
   width: 380px;
-  height: 800px;
+  height: 785px;
+  margin-bottom: 2rem;
 }
 .title__container {
   position: relative;
@@ -50,6 +51,7 @@ header {
   font-weight: bold;
   border-radius: 3rem 0 3rem 0;
   right: 10px;
+  bottom: 0;
   padding: 1rem;
   border: 5px solid var(--colorClaro);
 }
