--- a/src/Components/PageCursos/PageCursos.css
+++ b/src/Components/PageCursos/PageCursos.css
@@ -1,8 +1,8 @@
-header {
+.page__cursos {
   padding-top: 2rem;
   position: relative;
   width: 380px;
-  height: 785px;
+  height: 600px;
   margin-bottom: 2rem;
 }
 .title__container {
@@ -65,7 +65,7 @@ header {
 }
 
 @media (min-width: 768px) {
-  header {
+  .page__cursos {
     width: 768px;
     height: 750px;
   }
@@ -85,7 +85,7 @@ header {
   }
 }
 @media (min-width: 950px) {
-  header {
+  .page__cursos {
     width: 950px;
     height: 800px;
   }
