--- a/src/Components/PageCursos/Contenido/CardCurso.css
+++ b/src/Components/PageCursos/Contenido/CardCurso.css
@@ -4,6 +4,12 @@
   padding: 0.5rem;
   border-radius: 1rem;
 }
+
+.contenedor__cards {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
 .curso__card {
   display: flex;
   flex-direction: column;
