--- a/src/Components/PageCursos/PageCursos.css
+++ b/src/Components/PageCursos/PageCursos.css
@@ -42,7 +42,7 @@
   top: 120px;
   border-radius: 0 6rem 0 6rem;
 }
-.text__container {
+.textcurso__container {
   position: absolute;
   z-index: 12;
   width: 90%;
@@ -77,7 +77,7 @@
     width: 70%;
   }
 
-  .text__container {
+  .textcurso__container {
     bottom: 50px;
   }
   .text__container p {
@@ -94,7 +94,7 @@
     right: 320px;
   }
 
-  .text__container {
+  .textcurso__container {
     bottom: 50px;
   }
   .text__container p {
