--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,7 @@ html {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 16px;
+  scroll-behavior: smooth;
 }
 #root {
   box-sizing: border-box;
